[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyevmmax"
version = "0.0.1"
authors = [
  { name="Jared Wasinger", email="" },
]
description = "python reference implementation of EVMMAX"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jwasinger/py-evmmax"
"Bug Tracker" = "https://github.com/jwasinger/py-evmmax/issues"
